--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 
     <link rel="icon" type="image/png" href="./assets/icons/MusicNotes.svg">
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    
+    <div class="flex gap-1">
+        <a href="#" class="btn btn-sm">Label</a>
+        <span href="#" class="btn btn-md">Label</span>
+        <button href="#" class="btn btn-lg">Label</a>
+    </div>
+
+    <div class="flex gap-1">
+        <a aria-label="Label" href="#" class="btn btn-sm"></a>
+        <span aria-label="Label" href="#" class="btn btn-md"></span>
+        <button aria-label="Label" href="#" class="btn btn-lg"></a>
+    </div>
 </body>
 </html>
