--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <div id="hero">
+    <section id="hero">
         <div class="container py-xl">
             <img src="./assets/icons/Union.svg" alt="">
 
@@ -38,6 +38,29 @@
                 <a href="#download" class="btn btn-md">Baixar agora</a>
             </div>
         </div>
-    </div>
+    </section>
+
+    <section id="smartphones-img">
+        <div class="container">
+            <img src="./assets/App mockups.png" alt="Imagem de dois celulares">
+        </div>
+    </section>
+
+    <section id="about">
+        <div class="container even-columns py-xl items-center">
+            <div>
+                <header>
+                    <strong>Conheça o app</strong>
+                    <h2>O aplicativo perfeito para aprender a cantar</h2>
+                </header>
+            <p>Nosso algoritmo de Inteligência Artificial permite remover a voz original e manter as melodias das músicas. Dessa forma, temos o maior repertório musical para Karaokê! Além disso, ao cantar, sua voz e afinação é comparada pelo algoritmo permitindo uma avaliação precisa da sua performance te ajudando a melhorar seu canto.</p>
+            </div>
+            <div>
+                <img 
+                class="desktop-only"
+                src="./assets/App mockups.png" alt="Imagem de dois celulares">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
