--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/png" href="./assets/icons/MusicNotes.svg">
 
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body>
     <header>
@@ -35,7 +35,7 @@
 
             <div class="buttons flex items-center gap-1">
                 <a href="#pricing" aria-label="Ver Planos" class="btn btn-md"></a>
-                <a href="#download" class="btn btn-md">Baixar agora</a>
+                <a href="#downloads" class="btn btn-md">Baixar agora</a>
             </div>
         </div>
     </section>
@@ -59,6 +59,43 @@
                 <img 
                 class="desktop-only"
                 src="./assets/App mockups.png" alt="Imagem de dois celulares">
+            </div>
+        </div>
+    </section>
+
+    <section id="features">
+        <div class="cards container py-xl grid gap-15">
+            <div class="card py-lg px-lg">
+                <img src="./assets/icons/MagicWand.svg" alt="">
+                <h3>A maior biblioteca de músicas de Karaokê!</h3>
+                <p>Nossa IA remove a voz de qualquer música e a deixa pronta pra cantar, num passe de mágica!</p>
+            </div>
+
+            <div class="card py-lg px-lg">
+                <div>
+                    <img src="./assets/icons/GameController.svg" alt="">
+                    <h3>Experiência gamificada</h3>
+                    <p>Sua performance é pontuada de acordo com nosso algoritmo ultra preciso. Desafie-se, ganhe reconhecimento e comemore sua evolução!</p>
+                </div>
+                <img class="desktop-only" src="./assets/Tela 2.png" alt="">
+            </div>
+
+            <div class="card py-lg px-lg">
+                <img src="./assets/icons/MicrophoneStage.svg" alt="">
+                <h3>Grave suas performances</h3>
+                <p>Compartilhe suas gravações com a comunidade, interaja e explore a performance vocal de outras pessoas no seu feed!</p>
+            </div>
+
+            <div class="card py-lg px-lg">
+                <img src="./assets/icons/UsersThree.svg" alt="">
+                <h3>Compartilhe com a comunidade</h3>
+                <p>Nossa IA remove a voz de qualquer música e a deixa pronta pra cantar, num passe de mágica!</p>
+            </div>
+
+            <div class="card py-lg px-lg">
+                <img src="./assets/icons/MusicNotes.svg" alt="">
+                <h3>Letras em tempo-real</h3>
+                <p>Nunca perca o ritmo com as letras das músicas sincronizadas e exibidas em tempo real. Você também pode ativar a voz original da música para ajudar.</p>
             </div>
         </div>
     </section>
