--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="features">
         <div class="cards container py-xl grid gap-1.5">
           <div class="card py-lg px-lg">
-            <img src="assets/icons/MagicWandx.svg" alt="" />
+            <img src="assets/icons/MagicWand.svg" alt="" />
             <h3>A maior biblioteca de músicas de Karaokê!</h3>
             <p>
               Nossa IA remove a voz de qualquer música e a deixa pronta pra
@@ -119,6 +119,35 @@
             </div>
             <img class="desktop-only" src="assets/Tela 3.png" alt="" />
           </div>
+        </div>
+      </section>
+
+      <section id="pricing">
+        <div class="container py-xl">
+          <header>
+            <strong>Planos e preços</strong>
+            <h2>Assine e tenha acesso ilimitado a todas as funcionalidades</h2>
+          </header>
+  
+          <div class="cards even-columns items-center">
+            <div class="card py-lg px-lg">
+              <h3>Básico</h3>
+              <p>Baixe o app e comece a cantar agora mesmo!</p>
+              <zin-pricing>Grátis</zin-pricing>
+              <a
+                href="#download"
+                class="btn btn-md"
+                aria-label="Baixar agora"
+              ></a>
+              <div class="separator"></div>
+              <ul role="list" class="grid gap-1">
+                <li>Com anúncios</li>
+                <li>Até 5 músicas por dia</li>
+                <li>Cante apenas as músicas disponíveis no plano gratuito</li>
+              </ul>
+            </div>
+            
+            </div>
         </div>
       </section>
 </body>
