--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/png" href="./assets/icons/MusicNotes.svg">
 
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="styles/index.css" />
 </head>
 <body>
     <header>
